# EDA_T3_2023-2

./: CMakeLists.txt  README.md
include/: calculator.hpp  dictionary.hpp  interactiveIO.hpp  node.hpp  stack.hpp  tree.hpp  utils.hpp
include/stack/: node.hpp  stack.hpp
src/: calculator.cpp  infixToPostfix.cpp  interactiveIO.cpp  node.cpp  stack.cpp  tree.cpp  utils.cpp
test/: test.cpp
